2003-01-14  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/dl-procinfo.c (_dl_x86_cap_flags):
	Fix entry for bit 31.

	* iconvdata/Makefile: Add rules to build IBM866NAV.
	* iconvdata/ibm866nav.c: New file.
	* iconvdata/tst-tables.sh: Add IBM866NAV.
	* iconvdata/gconv-modules: Add entries for IBM866NAV.

2003-01-13  Ulrich Drepper  <drepper@redhat.com>

	* string/tester.c (test_strcpy): Use the previously #if 0'ed code
	to test void* parameters.

	* sysdeps/i386/i486/bits/string.h (__STRING_SMALLL_GET16): Cast
	source pointer before dereferencing.
	(__STRING_SMALLL_GET32): Likewise.
	(__memset_gc): Add missing parenthesis around macro arguments.
	Patch by Denis Zaitsev<zzz@cd-club.ru>.

	* sysdeps/i386/i486/bits/string.h (__strspn_cg): Tell the compiler
	that %eax is modified.  Reported by Denis Zaitsev<zzz@cd-club.ru>.

2003-01-14  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/alpha/sysdep.h (INLINE_SYSCALL): Undefined before
	defining.

2003-01-13  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/s390/s390-64/initfini.c: Avoid unterminated string literals.
	* sysdeps/unix/sysv/linux/s390/s390-32/sysdep.h (L): Don't define it
	here.
	* sysdeps/unix/sysv/linux/s390/s390-64/sysdep.h (L): Likewise.

2003-01-13  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/s390/s390-32/sysdep.h (JUMPTARGET): Move branch instructions
	from here...
	(PSEUDO): ... to here.
	* sysdeps/s390/s390-64/sysdep.h (JUMPTARGET): Move branch instruction
	from here...
	(PSEUDO): ... to here.

2003-01-13  Ulrich Drepper  <drepper@redhat.com>

	* locale/programs/charmap-dir.c (charmap_readdir): Use struct
	dirent64 instead of struct dirent for dirent.  Call readdir64
	instead of readdir.

	* locale/programs/locfile.c (siblings_uncached): Use struct
	dirent64 instead of struct dirent for other_dentry.  Call
	readdir64 instead of readdir.

	* elf/ldconfig.c (direntry): Change type to struct dirent64.
	(search_dir): Use readdir64 instead of readdir.